--- a/public/css/global.css
+++ b/public/css/global.css
@@ -438,7 +438,7 @@ input[type="range"]:focus {
     @apply object-cover;
   }
 }
-.breadcrumb-link{
+.breadcrumb-link {
   position: relative;
 }
 
@@ -457,4 +457,11 @@ input[type="range"]:focus {
     min-width: unset !important;
     width: 318px !important;
   }
+}
+.open-filter-btn {
+  box-shadow: 0px 0px 18px -3px #000;
+}
+
+.swiper-button-disabled {
+  @apply opacity-[0.6];
 }
