--- a/public/css/global.css
+++ b/public/css/global.css
@@ -437,6 +437,25 @@ input[type="range"]:focus {
   .oasis-swiper__wrapper .swiper-img {
     @apply object-cover;
   }
+  .scroll-container {
+    width: 100vw;
+    height: 594px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+  }
+
+  .image-container {
+    position: relative;
+    width: 768px;
+    height: 100%;
+  }
+
+  .complex-bg {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+  }
 }
 .breadcrumb-link {
   position: relative;
@@ -465,3 +484,5 @@ input[type="range"]:focus {
 .swiper-button-disabled {
   @apply opacity-[0.6];
 }
+
+/*  */
