--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -714,6 +714,22 @@ video {
   top: 34px;
 }
 
+.left-\[160px\] {
+  left: 160px;
+}
+
+.top-\[135px\] {
+  top: 135px;
+}
+
+.left-\[265px\] {
+  left: 265px;
+}
+
+.right-\[250px\] {
+  right: 250px;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -993,12 +1009,12 @@ video {
   height: 213px;
 }
 
-.h-\[244px\] {
-  height: 244px;
+.h-\[240px\] {
+  height: 240px;
 }
 
-.h-\[265px\] {
-  height: 265px;
+.h-\[244px\] {
+  height: 244px;
 }
 
 .h-\[278px\] {
@@ -3002,6 +3018,27 @@ input[type="range"]:focus {
     -o-object-fit: cover;
        object-fit: cover;
   }
+
+  .scroll-container {
+    width: 100vw;
+    height: 594px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+  }
+
+  .image-container {
+    position: relative;
+    width: 768px;
+    height: 100%;
+  }
+
+  .complex-bg {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: fill;
+       object-fit: fill;
+  }
 }
 
 .breadcrumb-link {
@@ -3033,6 +3070,8 @@ input[type="range"]:focus {
 .swiper-button-disabled {
   opacity: 0.6;
 }
+
+/*  */
 
 .placeholder\:text-\[\#3132455E\]::-moz-placeholder {
   color: #3132455E;
@@ -3393,6 +3432,11 @@ input[type="range"]:focus {
     border-top-width: 1px;
   }
 
+  .md\:object-cover {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
   .md\:px-\[22px\] {
     padding-left: 22px;
     padding-right: 22px;
@@ -3558,6 +3602,10 @@ input[type="range"]:focus {
 
   .md\:leading-\[60px\] {
     line-height: 60px;
+  }
+
+  .md\:text-light-white {
+    color: #FFFFFFB2;
   }
 
   .md\:text-white {
