--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -2000,6 +2000,14 @@ video {
   padding-top: 2px;
 }
 
+.pt-\[5px\] {
+  padding-top: 5px;
+}
+
+.pt-\[4px\] {
+  padding-top: 4px;
+}
+
 .text-center {
   text-align: center;
 }
